--- a/configs/cloudbuild.yaml
+++ b/configs/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'lol', '.']
+    args: ['build', '-t', 'lol', '-f', 'configs/Dockerfile', '.']
     timeout: 500s
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'lol']
