--- a/configs/cloudbuild.yaml
+++ b/configs/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['run', '-v', '/var/run/docker.sock:/var/run/docker.sock', '-e', 'IMAGE=${_IMAGE}', '-e', 'AWS_DEFAULT_REGION=${_AWS_DEFAULT_REGION}', '-e', 'AWS_ACCESS_KEY_ID=${_AWS_ACCESS_KEY_ID}', '-e', 'AWS_SECRET_ACCESS_KEY=${_AWS_SECRET_ACCESS_KEY}', 'im7mortal/aws:v1']
 substitutions:
-  _IMAGE: ${_REGISTRY}:${TAG_NAME}
+  _IMAGE: "${_REGISTRY}:${TAG_NAME}"
 
 #options:
 #  machineType: 'N1_HIGHCPU_8'
