--- a/configs/cloudbuild.yaml
+++ b/configs/cloudbuild.yaml
@@ -4,6 +4,15 @@ steps:
     timeout: 500s
   - name: 'gcr.io/cloud-builders/docker'
     args: ['run', '-v', '/var/run/docker.sock:/var/run/docker.sock', '-e', 'IMAGE=${_REGISTRY}:${TAG_NAME}', '-e', 'AWS_DEFAULT_REGION=${_AWS_DEFAULT_REGION}', '-e', 'AWS_ACCESS_KEY_ID=${_AWS_ACCESS_KEY_ID}', '-e', 'AWS_SECRET_ACCESS_KEY=${_AWS_SECRET_ACCESS_KEY}', 'im7mortal/aws:v1']
+  - name: 'curl'
+    args: ['-X',
+           'POST',
+           '-H',
+           'Content-type: application/json',
+           '--data',
+           '{"channel":"@peter","text":"The image was pushed: ${_REGISTRY}:${TAG_NAME}"}',
+            '${_SLACK_HOOK}'
+    ]
 #options:
 #  machineType: 'N1_HIGHCPU_8'
 #timeout: 660s
